[tool.poetry]
name = "typegraph"
version = "0.1.1"
description = "Graph of types."
authors = []
license = "Elastic License 2.0"
readme = "README.md"
repository = "https://github.com/metatypedev/typegraph"
include = [
    "typegraph", "pyproject.toml"
]
classifiers = [
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pytest = "^7.0.1"
commitizen = "^2.21.2"
pre-commit = "^2.17.0"

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.1.1"
version_files = [
    "pyproject.toml:version",
    "typegraph/version.py"
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
